[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=1]
[ext_resource path="res://gui_modules/CharacterCreation/SlaveCreationModule.gd" type="Script" id=2]
[ext_resource path="res://assets/Themes_v2/EmptyTexture.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/images/gui/exclamation.png" type="Texture" id=4]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/DropDown.tres" type="Theme" id=5]
[ext_resource path="res://assets/Themes_v2/CHAR_CREATION/ChC_Middle_Panel_Main.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/PT_24_Label.tres" type="Theme" id=7]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/CheckBox.tres" type="Theme" id=8]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/VScrollBar.tres" type="Theme" id=9]

[node name="SlaveCreationModule" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1140.0
margin_bottom = -250.0
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
self_modulate = Color( 0.180392, 0.054902, 0.713726, 1 )
show_behind_parent = true
margin_right = 780.0
margin_bottom = 830.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="descript" type="RichTextLabel" parent="."]
margin_left = 34.0
margin_top = 36.0
margin_right = 748.0
margin_bottom = 385.0
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0.976471, 0.882353, 0.505882, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 64.0
margin_top = 396.0
margin_right = 748.0
margin_bottom = 794.0
theme = ExtResource( 9 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
margin_right = 624.0
margin_bottom = 836.0
custom_constants/separation = 20

[node name="bodyparts" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
margin_right = 302.0
margin_bottom = 836.0
rect_min_size = Vector2( 302, 724 )

[node name="skin_label" type="Label" parent="ScrollContainer/HBoxContainer/bodyparts"]
margin_right = 302.0
margin_bottom = 35.0
theme = ExtResource( 7 )
text = "SLAVEPARTSKIN"
align = 1

[node name="skin" type="OptionButton" parent="ScrollContainer/HBoxContainer/bodyparts"]
margin_top = 39.0
margin_right = 302.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
align = 1

[node name="hair_length_label" type="Label" parent="ScrollContainer/HBoxContainer/bodyparts"]
margin_top = 84.0
margin_right = 302.0
margin_bottom = 119.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 1 )
text = "SLAVEPARTHAIR_LENGTH"
align = 1

[node name="hair_length" type="OptionButton" parent="ScrollContainer/HBoxContainer/bodyparts"]
margin_top = 123.0
margin_right = 302.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
align = 1

[node name="hair_color_label" type="Label" parent="ScrollContainer/HBoxContainer/bodyparts"]
margin_top = 168.0
margin_right = 302.0
margin_bottom = 203.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 1 )
text = "SLAVEPARTHAIR_COLOR"
align = 1

[node name="hair_color" type="OptionButton" parent="ScrollContainer/HBoxContainer/bodyparts"]
margin_top = 207.0
margin_right = 302.0
margin_bottom = 248.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
align = 1

[node name="eye_color_label" type="Label" parent="ScrollContainer/HBoxContainer/bodyparts"]
margin_top = 252.0
margin_right = 302.0
margin_bottom = 287.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 1 )
text = "SLAVEPARTEYE_COLOR"
align = 1

[node name="eye_color" type="OptionButton" parent="ScrollContainer/HBoxContainer/bodyparts"]
margin_top = 291.0
margin_right = 302.0
margin_bottom = 332.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
align = 1

[node name="eye_shape_label" type="Label" parent="ScrollContainer/HBoxContainer/bodyparts"]
margin_top = 336.0
margin_right = 302.0
margin_bottom = 371.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 1 )
text = "SLAVEPARTEYE_SHAPE"
align = 1

[node name="eye_shape" type="OptionButton" parent="ScrollContainer/HBoxContainer/bodyparts"]
margin_top = 375.0
margin_right = 302.0
margin_bottom = 416.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
align = 1

[node name="ears_label" type="Label" parent="ScrollContainer/HBoxContainer/bodyparts"]
margin_top = 420.0
margin_right = 302.0
margin_bottom = 455.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 1 )
text = "SLAVEPARTEARS"
align = 1

[node name="ears" type="OptionButton" parent="ScrollContainer/HBoxContainer/bodyparts"]
margin_top = 459.0
margin_right = 302.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
align = 1

[node name="horns_label" type="Label" parent="ScrollContainer/HBoxContainer/bodyparts"]
margin_top = 504.0
margin_right = 302.0
margin_bottom = 539.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 1 )
text = "SLAVEPARTHORNS"
align = 1

[node name="horns" type="OptionButton" parent="ScrollContainer/HBoxContainer/bodyparts"]
margin_top = 543.0
margin_right = 302.0
margin_bottom = 584.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
align = 1

[node name="tail_label" type="Label" parent="ScrollContainer/HBoxContainer/bodyparts"]
margin_top = 588.0
margin_right = 302.0
margin_bottom = 623.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 1 )
text = "SLAVEPARTTAIL"
align = 1

[node name="tail" type="OptionButton" parent="ScrollContainer/HBoxContainer/bodyparts"]
margin_top = 627.0
margin_right = 302.0
margin_bottom = 668.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
align = 1

[node name="wings_label" type="Label" parent="ScrollContainer/HBoxContainer/bodyparts"]
margin_top = 672.0
margin_right = 302.0
margin_bottom = 707.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 1 )
text = "SLAVEPARTWINGS"
align = 1

[node name="wings" type="OptionButton" parent="ScrollContainer/HBoxContainer/bodyparts"]
margin_top = 711.0
margin_right = 302.0
margin_bottom = 752.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
align = 1

[node name="height_label" type="Label" parent="ScrollContainer/HBoxContainer/bodyparts"]
margin_top = 756.0
margin_right = 302.0
margin_bottom = 791.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 1 )
text = "SLAVEPARTHEIGHT"
align = 1

[node name="height" type="OptionButton" parent="ScrollContainer/HBoxContainer/bodyparts"]
margin_top = 795.0
margin_right = 302.0
margin_bottom = 836.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
align = 1

[node name="bodyparts2" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
margin_left = 322.0
margin_right = 624.0
margin_bottom = 836.0
rect_min_size = Vector2( 302, 0 )

[node name="slave_class_label" type="Label" parent="ScrollContainer/HBoxContainer/bodyparts2"]
margin_right = 302.0
margin_bottom = 35.0
mouse_filter = 1
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.141176, 1, 0.858824, 1 )
text = "SLAVETYPE"
align = 1

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/HBoxContainer/bodyparts2/slave_class_label"]
margin_left = 229.0
margin_top = -5.0
margin_right = 265.0
margin_bottom = 29.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slave_class" type="OptionButton" parent="ScrollContainer/HBoxContainer/bodyparts2"]
margin_top = 39.0
margin_right = 302.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
align = 1

[node name="label_personality" type="Label" parent="ScrollContainer/HBoxContainer/bodyparts2"]
margin_top = 84.0
margin_right = 302.0
margin_bottom = 119.0
mouse_filter = 0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 1 )
text = "SLAVEPARTPERSONALITY"
align = 1

[node name="personality" type="OptionButton" parent="ScrollContainer/HBoxContainer/bodyparts2"]
margin_top = 123.0
margin_right = 302.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
align = 1

[node name="penis_size_label" type="Label" parent="ScrollContainer/HBoxContainer/bodyparts2"]
margin_top = 168.0
margin_right = 302.0
margin_bottom = 203.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 1 )
text = "SLAVEPARTPENIS_SIZE"
align = 1

[node name="penis_size" type="OptionButton" parent="ScrollContainer/HBoxContainer/bodyparts2"]
margin_top = 207.0
margin_right = 302.0
margin_bottom = 248.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
align = 1

[node name="penis_type_label" type="Label" parent="ScrollContainer/HBoxContainer/bodyparts2"]
margin_top = 252.0
margin_right = 302.0
margin_bottom = 287.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 1 )
text = "SLAVEPARTPENIS_TYPE"
align = 1

[node name="penis_type" type="OptionButton" parent="ScrollContainer/HBoxContainer/bodyparts2"]
margin_top = 291.0
margin_right = 302.0
margin_bottom = 332.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
align = 1

[node name="balls_size_label" type="Label" parent="ScrollContainer/HBoxContainer/bodyparts2"]
margin_top = 336.0
margin_right = 302.0
margin_bottom = 371.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 1 )
text = "SLAVEPARTBALLS_SIZE"
align = 1

[node name="balls_size" type="OptionButton" parent="ScrollContainer/HBoxContainer/bodyparts2"]
margin_top = 375.0
margin_right = 302.0
margin_bottom = 416.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
align = 1

[node name="tits_size_label" type="Label" parent="ScrollContainer/HBoxContainer/bodyparts2"]
margin_top = 420.0
margin_right = 302.0
margin_bottom = 455.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 1 )
text = "SLAVEPARTTITS_SIZE"
align = 1

[node name="tits_size" type="OptionButton" parent="ScrollContainer/HBoxContainer/bodyparts2"]
margin_top = 459.0
margin_right = 302.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
align = 1

[node name="ass_size_label" type="Label" parent="ScrollContainer/HBoxContainer/bodyparts2"]
margin_top = 504.0
margin_right = 302.0
margin_bottom = 539.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 1 )
text = "SLAVEPARTASS_SIZE"
align = 1

[node name="ass_size" type="OptionButton" parent="ScrollContainer/HBoxContainer/bodyparts2"]
margin_top = 543.0
margin_right = 302.0
margin_bottom = 584.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
align = 1

[node name="vaginal_virgin" type="CheckBox" parent="ScrollContainer/HBoxContainer/bodyparts2"]
margin_top = 588.0
margin_right = 302.0
margin_bottom = 648.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 8 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/hover_pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
text = "SLAVEPARTVAGINAL_VIRGIN"
clip_text = true

[node name="penis_virgin" type="CheckBox" parent="ScrollContainer/HBoxContainer/bodyparts2"]
margin_top = 652.0
margin_right = 302.0
margin_bottom = 712.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 8 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/hover_pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
text = "SLAVEPARTPENIS_VIRGIN"
clip_text = true

[node name="anal_virgin" type="CheckBox" parent="ScrollContainer/HBoxContainer/bodyparts2"]
margin_top = 716.0
margin_right = 302.0
margin_bottom = 776.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 8 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/hover_pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
text = "SLAVEPARTANAL_VIRGIN"
clip_text = true

[node name="diet_label" type="Label" parent="ScrollContainer/HBoxContainer/bodyparts2"]
visible = false
margin_top = 492.0
margin_right = 278.0
margin_bottom = 516.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 1 )
text = "SLAVEDIET"
align = 1

[node name="diet" type="Button" parent="ScrollContainer/HBoxContainer/bodyparts2"]
visible = false
margin_top = 520.0
margin_right = 278.0
margin_bottom = 570.0
rect_min_size = Vector2( 0, 50 )

[node name="class_label" type="Label" parent="ScrollContainer/HBoxContainer/bodyparts2"]
visible = false
margin_top = 752.0
margin_right = 302.0
margin_bottom = 784.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 1 )
text = "SLAVESTARTINGCLASS"
align = 1

[node name="class" type="Button" parent="ScrollContainer/HBoxContainer/bodyparts2"]
visible = false
margin_top = 602.0
margin_right = 278.0
margin_bottom = 652.0
rect_min_size = Vector2( 0, 50 )
